2000-02-10  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_OUTPUT): When dispatching your arguments, use
	ifval, not ifset!
	Dispatch actions to AC_CONFIG_COMMANDS not AC_OUTPUT_COMMANDS, to
	avoid unneeded warnings for obsolete use of AC_OUTPUT_COMMANDS.

2000-02-10  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_VERBOSE): This is a tab, not spaces.

2000-02-10  Akim Demaille  <akim@epita.fr>

	Changequote busters II.
	They're back to save the world.

	* acspecific.m4 (AC_PROG_CC_C_O, AC_PROG_F77_C_O,
	AC_PROG_MAKE_SET, AC_TYPE_GETGROUPS, AC_FUNC_GETLOADAVG,
	AC_FUNC_MKTIME, AC_STRUCT_TIMEZONE, AC_F77_LIBRARY_LDFLAGS): Blast
	that jelly o' changequote.  Set the quotes free.

2000-02-10  Akim Demaille  <akim@epita.fr>

	Interrupting autoheader left temp files.
	From Jim Meyering.

	* autoheader.sh (usage): The usage is to use $0 here.
	(ah_base): Be in TMPDIR.
	Install the `trap' before creating the first tmp file.
	Also trap on 0.

2000-02-10  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_OUTPUT_MAKE_DEFS): This is a routine of
	`configure', not `config.status', hence use `conftest' for tmp
	files, not `$ac_cs_root'.
	Removed forgotten developer comment.
	Double quoting the whole body is nicer than just the part that
	needs to be.

2000-02-10  Akim Demaille  <akim@epita.fr>

	* tests/torture.m4: Also check the value of @DEFS@ when no
	CONFIG_HEADER is used.

2000-02-10  Akim Demaille  <akim@epita.fr>

	Changequote-busters!
	From Dan Ackroyd.

	* acgeneral.m4 (AC_INIT_PARSE_ARGS, AC_INIT_PREPARE,
	AC_CACHE_SAVE, AC_PREFIX_PROGRAM, AC_OUTPUT,
	_AC_OUTPUT_CONFIG_STATUS, AC_OUTPUT_MAKE_DEFS, AC_OUTPUT_FILES,
	_AC_OUTPUT_HEADERS, AC_OUTPUT_LINKS, AC_OUTPUT_SUBDIRS): Quit
	playing with changequotes, @BKL@ and Co.!  Just quote properly.

2000-02-10  Akim Demaille  <akim@epita.fr>

	Honor properly the `#define' config.h.in templates.
	Test it.

	* acgeneral.m4 (AC_OUTPUT_HEADERS): Renamed as...
	(_AC_OUTPUT_HEADERS): this.  All callers changed.