@@ -20,7 +20,7 @@ print version number, then exit
 don't remove temporary files
 .TP
 \fB\-m\fR, \fB\-\-macrodir\fR=\fIDIR\fR
-directory storing macro files
+directory storing Autoconf's macro files
 .TP
 \fB\-l\fR, \fB\-\-localdir\fR=\fIDIR\fR
 directory storing `aclocal.m4' and `acconfig.h'
