@@ -1,5 +1,9 @@
 2000-02-10  Akim Demaille  <akim@epita.fr>
 
+	* autoheader.sh: Remove the duplicate trap code.
+
+2000-02-10  Akim Demaille  <akim@epita.fr>
+
 	* acgeneral.m4 (AC_OUTPUT): When dispatching your arguments, use
 	ifval, not ifset!
 	Dispatch actions to AC_CONFIG_COMMANDS not AC_OUTPUT_COMMANDS, to
